Added List to view messages from websocket

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,10 @@
   Angular Websockets Tutorial
 </h1>
 
+<ul>
+  <li *ngFor="let message of messageList; let i = index; trackBy: trackByFn">
+    {{ message.author }} - {{ message.message }}
+  </li>
+</ul>
+
 <button (click)="sendMsg()">Send Message</button>
