Created chat component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,3 @@
-<h1>
-  Angular Websockets Tutorial
-</h1>
-
-<ul>
-  <li *ngFor="let message of messageList; let i = index; trackBy: trackByFn">
-    {{ message.author }} - {{ message.message }}
-  </li>
-</ul>
-
-<button (click)="sendMsg()">Send Message</button>
+<h1>KChat Angular</h1>
+<hr>
+<app-chat></app-chat>
